@@ -1,3 +1,7 @@
+2002-02-16  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pylibs/vfs/importer.py: still very primitive import hook for vfs.
+
 2002-02-15  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* SkunkWeb/sw.conf.in: added rewrite documentation.
